Intégration Footer : correction alignement, suppression puces et marges

--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,43 @@ a {
     margin-bottom: 5px;
 }
 
+footer {
+    margin-top: 0%;
+    width: 100%;
+    background-color: #F2F2F2;
+    max-width: 1440px;
+    padding: 30px 0; 
+    
+
+.footer-content {
+    max-width: 1440px; 
+    margin: 0 auto;
+    padding: 0 50px;
+    display: flex;
+    justify-content: space-around;
+}   
+}
+footer h3 {
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+footer ul {
+    list-style-type: none;
+    padding: 0%;
+    margin: 0%;
+}
+
+footer ul li {
+    margin-bottom: 10px;
+}
+
+footer a {
+    text-decoration: none;
+    color: black;
+}
+
+
 
 
 
